<?xml version="1.0"?>
<package>
    <name>muse_mcl_2d_gridmaps</name>
    <version>0.0.2</version>
    <description>The muse_mcl_2d_gridmaps package</description>

    <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
    <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>muse_mcl_2d</build_depend>
    <build_depend>muse_mcl_2d_laser</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>cslibs_math_2d</build_depend>
    <build_depend>cslibs_gridmaps</build_depend>

    <run_depend>muse_mcl_2d</run_depend>
    <run_depend>muse_mcl_2d_laser</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rostest</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>cslibs_math_2d</run_depend>
    <run_depend>cslibs_gridmaps</run_depend>

    <export>
        <muse_mcl_2d plugin="${prefix}/plugins.xml" />
    </export>
</package>
