<?xml version="1.0"?>
<package format="2">
  <name>muse_mcl_2d_launch</name>
  <version>0.0.1</version>
  <description>The muse_mcl_launch package contains files for the muse amcl project.</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>muse_mcl_2d</exec_depend>
  <exec_depend>muse_mcl_2d_laser</exec_depend>
  <exec_depend>muse_mcl_2d_gridmaps</exec_depend>
  <exec_depend>muse_mcl_2d_odometry</exec_depend>

  <export>
  </export>
</package>
