<?xml version="1.0"?>
<package>
  <name>muse_mcl_2d_mapping</name>
  <version>0.0.1</version>
  <description>The muse_mcl_2d_mapping package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>muse_mcl_2d_gridmaps</build_depend>
  <build_depend>muse_mcl_2d_ndt</build_depend>
  <build_depend>muse_mcl_2d_laser</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>muse_smc</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>muse_mcl_2d_gridmaps</run_depend>
  <run_depend>muse_mcl_2d_ndt</run_depend>
  <run_depend>muse_mcl_2d_laser</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>muse_smc</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
