<?xml version="1.0"?>
<package format="2">
  <name>muse_mcl_2d_mapping</name>
  <version>0.0.1</version>
  <description>The muse_mcl_2d_mapping package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>muse_mcl_2d_ndt</depend>
  <depend>muse_mcl_2d_laser</depend>
  <depend>cslibs_gridmaps</depend>
  <depend>cslibs_ndt</depend>
  <depend>cslibs_utility</depend>
  <depend>nav_msgs</depend>
  <depend>muse_smc</depend>
  <depend>roscpp</depend>

<export>
  </export>
</package>
