<?xml version="1.0"?>
<package>
  <name>muse_mcl_2d_sampling</name>
  <version>0.0.0</version>
  <description>The muse_mcl_2d_sampling package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_indexed_storage</build_depend>  <!-- REMOVE THIS -->
  <build_depend>muse_mcl</build_depend>
  <build_depend>muse_mcl_2d_gridmaps</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cslibs_indexed_storage</run_depend> <!-- REMOVE THIS -->
  <run_depend>muse_mcl</run_depend>
  <run_depend>muse_mcl_2d_gridmaps</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>tf</run_depend>


  <export>
      <muse_mcl plugin="${prefix}/plugins.xml" />
  </export>
</package>
