<?xml version="1.0"?>
<package>
  <name>muse_mcl_2d_vectormaps</name>
  <version>0.0.0</version>
  <description>The muse_mcl_2d_vectormaps package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_boost_geometry</build_depend>
  <build_depend>cslibs_vectormaps</build_depend>
  <build_depend>muse_smc</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>cslibs_indexed_storage</build_depend> <!-- REMOVE THIS -->
  <run_depend>cslibs_boost_geometry</run_depend>
  <run_depend>cslibs_vectormaps</run_depend>
  <run_depend>muse_smc</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>cslibs_indexed_storage</run_depend> <!-- REMOVE THIS -->


  <export>
    <muse_mcl plugin="${prefix}/plugins.xml" />
  </export>
</package>
